# mylang

./: .gitignore  Launcher.cfg  README.md  ex.py  example.mylang  exceptions.py  function.mylang  functions_test.py  interpreter.py  lexer.py  log  main.py  ml_interpreter.py  ml_interpreter_cython.c  ml_lexer.py  ml_namespace.py  ml_parser.py  myparser.py  namespace.py  output.py  parser.py  pyproject.toml  simple.mylang  test.mylang  test.par  test.py  test_ast.py  test_bracker_parser.py  todo.md  todos.json  view.py
.github/workflows/: codeql.yml  pylint.yml
cython/: ml_interpreter_cython.c  ml_interpreter_cython.pyx  setup.py
tests/: float.py  main.py  strings.py
