[project]
name = "mylang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "cython>=3.2.0",
    "setuptools>=80.9.0",
    "sly",
    "snakeviz>=2.2.2",
]

[tool.uv.sources]
sly = { git = "https://github.com/pro99d/sly.git", rev = "master" }
